Introduce Deno esbuild-java compatibility